# collatz

./: .gitignore  README.md
space/: CMakeLists.txt  build  collatz.cpp  collatz.hpp
time/: collatz.cpp  collatz.hpp  main.cpp
